--- a/src/main/resources/static/menu.html
+++ b/src/main/resources/static/menu.html
@@ -6,7 +6,7 @@
             <link rel="stylesheet" href="style-menu.css">
             <div class="overlay"></div>
             <div class="profile profile-link">
-                <a href="/profile" methods="get" > Profile </a>
+                <a href="/profile.html" methods="get" > Profile </a>
             </div>
 
             <div class="container">
