--- a/src/main/resources/static/profile.html
+++ b/src/main/resources/static/profile.html
@@ -76,7 +76,7 @@
     </div>
 
     <a id="logout-btn" href="/logout">Logout</a>
-    <a id="edit-profile-btn" href="/edit-profile.html">Edit Profil</a>
+    <a id="edit-profile-btn" href="/edit-profile">Edit Profil</a>
 </div>
 </body>
 </html>
